# holidays-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  gen.py  pyproject.toml
.github/workflows/: test.yml
examples/: builder.rs  iter.rs  simple.rs
src/: build.rs  build_help.rs  builder.rs  country.rs  iter.rs  lib.rs  prelude.rs
src/data/: ae.rs  am.rs  ao.rs  ar.rs  at.rs  au.rs  aw.rs  az.rs  ba.rs  bd.rs  be.rs  bg.rs  bi.rs  bo.rs  br.rs  bw.rs  by.rs  ca.rs  ch.rs  cl.rs  cn.rs  co.rs  cu.rs  cw.rs  cy.rs  cz.rs  de.rs  de_bb.rs  de_be.rs  de_bw.rs  de_by.rs  de_byp.rs  de_hb.rs  de_he.rs  de_hh.rs  de_mv.rs  de_ni.rs  de_nw.rs  de_rp.rs  de_sh.rs  (+137 more)
tests/: test.rs
